参考文献、绪论

--- a/bib/thesis.bib
+++ b/bib/thesis.bib
@@ -8,3 +8,492 @@
   pages={29-81},
   year={1995},
 }
+@article{zhong2017seq2sql,
+  title={Seq2SQL: Generating structured queries from natural language using reinforcement learning},
+  author={Zhong, Victor and Xiong, Caiming and Socher, Richard},
+  journal={arXiv preprint arXiv:1709.00103},
+  year={2017}
+}
+@article{yu2010keyword,
+  title={Keyword Search in Databases (Synthesis Lectures on Data Management)},
+  author={Yu, Jeffrey Xu and Qin, Lu and Chang, Lijun and Ozsu, M Tamer},
+  year={2010},
+  publisher={Morgan and Claypool Publishers}
+}
+@inproceedings{bhalotia2002keyword,
+  title={Keyword searching and browsing in databases using BANKS},
+  author={Bhalotia, Gaurav and Hulgeri, Arvind and Nakhe, Charuta and Chakrabarti, Soumen and Sudarshan, Shashank},
+  booktitle={Data Engineering, 2002. Proceedings. 18th International Conference on},
+  pages={431--440},
+  year={2002},
+  organization={IEEE}
+}
+@inproceedings{agrawal2002dbxplorer,
+  title={DBXplorer: A system for keyword-based search over relational databases},
+  author={Agrawal, Sanjay and Chaudhuri, Surajit and Das, Gautam},
+  booktitle={Data Engineering, 2002. Proceedings. 18th International Conference on},
+  pages={5--16},
+  year={2002},
+  organization={IEEE}
+}
+@inproceedings{hristidis2002discover,
+  title={Discover: Keyword search in relational databases},
+  author={Hristidis, Vagelis and Papakonstantinou, Yannis},
+  booktitle={VLDB'02: Proceedings of the 28th International Conference on Very Large Databases},
+  pages={670--681},
+  year={2002},
+  organization={Elsevier}
+}
+@inproceedings{tata2008sqak,
+  title={SQAK: doing more with keywords},
+  author={Tata, Sandeep and Lohman, Guy M},
+  booktitle={Proceedings of the 2008 ACM SIGMOD international conference on Management of data},
+  pages={889--902},
+  year={2008},
+  organization={ACM}
+}
+@article{simitsis2008precis,
+  title={Pr{\'e}cis: from unstructured keywords as queries to structured databases as answers},
+  author={Simitsis, Alkis and Koutrika, Georgia and Ioannidis, Yannis},
+  journal={The VLDB Journal—The International Journal on Very Large Data Bases},
+  volume={17},
+  number={1},
+  pages={117--149},
+  year={2008},
+  publisher={Springer-Verlag New York, Inc.}
+}
+@article{ganti2010keyword++,
+  title={Keyword++: A framework to improve keyword search over entity databases},
+  author={Ganti, Venkatesh and He, Yeye and Xin, Dong},
+  journal={Proceedings of the VLDB Endowment},
+  volume={3},
+  number={1-2},
+  pages={711--722},
+  year={2010},
+  publisher={VLDB Endowment}
+}
+@article{blunschi2012soda,
+  title={Soda: Generating sql for business users},
+  author={Blunschi, Lukas and Jossen, Claudio and Kossmann, Donald and Mori, Magdalini and Stockinger, Kurt},
+  journal={Proceedings of the VLDB Endowment},
+  volume={5},
+  number={10},
+  pages={932--943},
+  year={2012},
+  publisher={VLDB Endowment}
+}
+@article{bergamaschi2013quest,
+  title={QUEST: a keyword search system for relational data based on semantic and machine learning techniques},
+  author={Bergamaschi, Sonia and Guerra, Francesco and Interlandi, Matteo and Trillo-Lado, Raquel and Velegrakis, Yannis},
+  journal={Proceedings of the VLDB Endowment},
+  volume={6},
+  number={12},
+  pages={1222--1225},
+  year={2013},
+  publisher={VLDB Endowment}
+}
+@inproceedings{popescu2003towards,
+  title={Towards a theory of natural language interfaces to databases},
+  author={Popescu, Ana-Maria and Etzioni, Oren and Kautz, Henry},
+  booktitle={Proceedings of the 8th international conference on Intelligent user interfaces},
+  pages={149--157},
+  year={2003},
+  organization={ACM}
+}
+@inproceedings{popescu2004modern,
+  title={Modern natural language interfaces to databases: Composing statistical parsing with semantic tractability},
+  author={Popescu, Ana-Maria and Armanasu, Alex and Etzioni, Oren and Ko, David and Yates, Alexander},
+  booktitle={Proceedings of the 20th international conference on Computational Linguistics},
+  pages={141},
+  year={2004},
+  organization={Association for Computational Linguistics}
+}
+@article{kuepper1993nauda,
+  title={NAUDA: A cooperative natural language interface to relational databases},
+  author={Kuepper, Detlef and Storbel, M and Roesner, Dietmar},
+  journal={ACM SIGMOD Record},
+  volume={22},
+  number={2},
+  pages={529--533},
+  year={1993},
+  publisher={ACM}
+}
+@inproceedings{li2005nalix,
+  title={NaLIX: an interactive natural language interface for querying XML},
+  author={Li, Yunyao and Yang, Huahai and Jagadish, HV},
+  booktitle={Proceedings of the 2005 ACM SIGMOD international conference on Management of data},
+  pages={900--902},
+  year={2005},
+  organization={ACM}
+}
+@article{de2018generating,
+  title={Generating typed dependency parses from phrase structure parses},
+  author={De Marneffe, Marie-Catherine and MacCartney, Bill and Manning, Christopher D},
+  year={2018}
+}
+@article{wu1994verb,
+  title={verb semantics and lexical selection In Proceedings of the 32nd annual meeting of the association for computational linguistics},
+  author={Wu, Z and Palmer, M},
+  journal={New Mexico},
+  year={1994}
+}
+@article{xiao2011efficient,
+  title={Efficient similarity joins for near-duplicate detection},
+  author={Xiao, Chuan and Wang, Wei and Lin, Xuemin and Yu, Jeffrey Xu and Wang, Guoren},
+  journal={ACM Transactions on Database Systems (TODS)},
+  volume={36},
+  number={3},
+  pages={15},
+  year={2011},
+  publisher={ACM}
+}
+@article{li2014constructing,
+  title={Constructing an interactive natural language interface for relational databases},
+  author={Li, Fei and Jagadish, HV},
+  journal={Proceedings of the VLDB Endowment},
+  volume={8},
+  number={1},
+  pages={73--84},
+  year={2014},
+  publisher={VLDB Endowment}
+}
+@inproceedings{zeng2014breaking,
+  title={Breaking out of the mismatch trap},
+  author={Zeng, Yong and Bao, Zhifeng and Ling, Tok Wang and Jagadish, HV and Li, Guoliang},
+  booktitle={Data Engineering (ICDE), 2014 IEEE 30th International Conference on},
+  pages={940--951},
+  year={2014},
+  organization={IEEE}
+}
+@article{goldman2017weakly,
+  title={Weakly-supervised Semantic Parsing with Abstract Examples},
+  author={Goldman, Omer and Latcinnik, Veronica and Naveh, Udi and Globerson, Amir and Berant, Jonathan},
+  journal={arXiv preprint arXiv:1711.05240},
+  year={2017}
+}
+@article{dong2016language,
+  title={Language to logical form with neural attention},
+  author={Dong, Li and Lapata, Mirella},
+  journal={arXiv preprint arXiv:1601.01280},
+  year={2016}
+}
+@article{xu2017sqlnet,
+  title={Sqlnet: Generating structured queries from natural language without reinforcement learning},
+  author={Xu, Xiaojun and Liu, Chang and Song, Dawn},
+  journal={arXiv preprint arXiv:1711.04436},
+  year={2017}
+}
+@article{yu2018typesql,
+  title={TypeSQL: Knowledge-based Type-Aware Neural Text-to-SQL Generation},
+  author={Yu, Tao and Li, Zifan and Zhang, Zilin and Zhang, Rui and Radev, Dragomir},
+  journal={arXiv preprint arXiv:1804.09769},
+  year={2018}
+}
+@article{huang2018natural,
+  title={Natural Language to Structured Query Generation via Meta-Learning},
+  author={Huang, Po-Sen and Wang, Chenglong and Singh, Rishabh and Yih, Wen-tau and He, Xiaodong},
+  journal={arXiv preprint arXiv:1803.02400},
+  year={2018}
+}
+@article{wang2018pointing,
+  title={Pointing Out SQL Queries From Text},
+  author={Wang, Chenglong and Brockschmidt, Marc and Singh, Rishabh},
+  year={2018}
+}
+@article{wang2018execution,
+  title={Execution-guided neural program decoding},
+  author={Wang, Chenglong and Huang, Po-Sen and Polozov, Alex and Brockschmidt, Marc and Singh, Rishabh},
+  journal={arXiv preprint arXiv:1807.03100},
+  year={2018}
+}
+@article{rumelhart1986learning,
+  title={Learning representations by back-propagating errors},
+  author={Rumelhart, David E and Hinton, Geoffrey E and Williams, Ronald J},
+  journal={nature},
+  volume={323},
+  number={6088},
+  pages={533},
+  year={1986},
+  publisher={Nature Publishing Group}
+}
+@book{goodfellow2016deep,
+  title={Deep learning},
+  author={Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron and Bengio, Yoshua},
+  volume={1},
+  year={2016},
+  publisher={MIT press Cambridge}
+}
+@inproceedings{vaswani2017attention,
+  title={Attention is all you need},
+  author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={5998--6008},
+  year={2017}
+}
+@inproceedings{price1990evaluation,
+  title={Evaluation of spoken language systems: The ATIS domain},
+  author={Price, Patti J},
+  booktitle={Speech and Natural Language: Proceedings of a Workshop Held at Hidden Valley, Pennsylvania, June 24-27, 1990},
+  year={1990}
+}
+@inproceedings{Dahl1994Expanding,
+  title={Expanding the scope of the ATIS task: The ATIS-3 corpus},
+  author={Dahl, Deborah A. and Bates, Madeleine and Brown, Michael and Fisher, William and Hunicke-Smith, Kate and Pallett, David and Pao, Christine and Rudnicky, Alexander I. and Shriberg, Elizabeth},
+  booktitle={The Workshop on Human Language Technology},
+  pages={43-48},
+  year={1994},
+}
+@inproceedings{Zelle2008Learning,
+  title={Learning to parse database queries using inductive logic programming},
+  author={Zelle, John M and Mooney, Raymond J},
+  booktitle={Thirteenth National Conference on Artificial Intelligence},
+  year={2008},
+}
+@article{dong2018coarse,
+  title={Coarse-to-Fine Decoding for Neural Semantic Parsing},
+  author={Dong, Li and Lapata, Mirella},
+  journal={arXiv preprint arXiv:1805.04793},
+  year={2018}
+}
+@inproceedings{pennington2014glove,
+  title={Glove: Global vectors for word representation},
+  author={Pennington, Jeffrey and Socher, Richard and Manning, Christopher},
+  booktitle={Proceedings of the 2014 conference on empirical methods in natural language processing (EMNLP)},
+  pages={1532--1543},
+  year={2014}
+}
+@article{kingma2014adam,
+  title={Adam: A method for stochastic optimization},
+  author={Kingma, Diederik P and Ba, Jimmy},
+  journal={arXiv preprint arXiv:1412.6980},
+  year={2014}
+}
+@inproceedings{yu2018spider,
+  title={Spider: A Large-Scale Human-Labeled Dataset for Complex and Cross-Domain Semantic Parsing and Text-to-SQL Task},
+  author={Yu, Tao and Zhang, Rui and Yang, Kai and Yasunaga, Michihiro and Wang, Dongxu and Li, Zifan and Ma, James and Li, Irene and Yao, Qingning and Roman, Shanelle and others},
+  booktitle={Proceedings of the 2018 Conference on Empirical Methods in Natural Language Processing},
+  pages={3911--3921},
+  year={2018}
+}
+@article{mikolov2013efficient,
+  title={Efficient estimation of word representations in vector space},
+  author={Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
+  journal={arXiv preprint arXiv:1301.3781},
+  year={2013}
+}
+@inproceedings{kiros2015skip,
+  title={Skip-thought vectors},
+  author={Kiros, Ryan and Zhu, Yukun and Salakhutdinov, Ruslan and Zemel, Richard S and Torralba, Antonio and Urtasun, Raquel and Fidler, Sanja},
+  booktitle={Proceedings of the 28th International Conference on Neural Information Processing Systems-Volume 2},
+  pages={3294--3302},
+  year={2015},
+  organization={MIT Press}
+}
+@inproceedings{collobert2008unified,
+  title={A unified architecture for natural language processing: Deep neural networks with multitask learning},
+  author={Collobert, Ronan and Weston, Jason},
+  booktitle={Proceedings of the 25th international conference on Machine learning},
+  pages={160--167},
+  year={2008},
+  organization={ACM}
+}
+@article{collobert2011natural,
+  title={Natural language processing (almost) from scratch},
+  author={Collobert, Ronan and Weston, Jason and Bottou, L{\'e}on and Karlen, Michael and Kavukcuoglu, Koray and Kuksa, Pavel},
+  journal={Journal of Machine Learning Research},
+  volume={12},
+  number={Aug},
+  pages={2493--2537},
+  year={2011}
+}
+@article{peters2018deep,
+  title={Deep contextualized word representations},
+  author={Peters, Matthew E and Neumann, Mark and Iyyer, Mohit and Gardner, Matt and Clark, Christopher and Lee, Kenton and Zettlemoyer, Luke},
+  journal={arXiv preprint arXiv:1802.05365},
+  year={2018}
+}
+@inproceedings{ramachandran2017unsupervised,
+  title={Unsupervised Pretraining for Sequence to Sequence Learning},
+  author={Ramachandran, Prajit and Liu, Peter and Le, Quoc},
+  booktitle={Proceedings of the 2017 Conference on Empirical Methods in Natural Language Processing},
+  pages={383--391},
+  year={2017}
+}
+@article{howard2018fine,
+  title={Fine-tuned Language Models for Text Classification},
+  author={Howard, Jeremy and Ruder, Sebastian},
+  journal={arXiv preprint arXiv:1801.06146},
+  year={2018}
+}
+@inproceedings{mccann2017learned,
+  title={Learned in translation: Contextualized word vectors},
+  author={McCann, Bryan and Bradbury, James and Xiong, Caiming and Socher, Richard},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={6294--6305},
+  year={2017}
+}
+@article{min2017question,
+  title={Question answering through transfer learning from large fine-grained supervision data},
+  author={Min, Sewon and Seo, Minjoon and Hajishirzi, Hannaneh},
+  journal={arXiv preprint arXiv:1702.02171},
+  year={2017}
+}
+@inproceedings{zoph2016transfer,
+  title={Transfer Learning for Low-Resource Neural Machine Translation},
+  author={Zoph, Barret and Yuret, Deniz and May, Jonathan and Knight, Kevin},
+  booktitle={Proceedings of the 2016 Conference on Empirical Methods in Natural Language Processing},
+  pages={1568--1575},
+  year={2016}
+}
+@inproceedings{hashimoto2017joint,
+  title={A Joint Many-Task Model: Growing a Neural Network for Multiple NLP Tasks},
+  author={Hashimoto, Kazuma and Tsuruoka, Yoshimasa and Socher, Richard and others},
+  booktitle={Proceedings of the 2017 Conference on Empirical Methods in Natural Language Processing},
+  pages={1923--1933},
+  year={2017}
+}
+@article{johnson2017google,
+  title={Google's Multilingual Neural Machine Translation System: Enabling Zero-Shot Translation},
+  author={Johnson, Melvin and Schuster, Mike and Le, Quoc V and Krikun, Maxim and Wu, Yonghui and Chen, Zhifeng and Thorat, Nikhil and Vi{\'e}gas, Fernanda and Wattenberg, Martin and Corrado, Greg and others},
+  journal={Transactions of the Association of Computational Linguistics},
+  volume={5},
+  number={1},
+  pages={339--351},
+  year={2017}
+}
+@article{luong2015multi,
+  title={Multi-task sequence to sequence learning},
+  author={Luong, Minh-Thang and Le, Quoc V and Sutskever, Ilya and Vinyals, Oriol and Kaiser, Lukasz},
+  journal={arXiv preprint arXiv:1511.06114},
+  year={2015}
+}
+@article{kaiser2017one,
+  title={One model to learn them all},
+  author={Kaiser, Lukasz and Gomez, Aidan N and Shazeer, Noam and Vaswani, Ashish and Parmar, Niki and Jones, Llion and Uszkoreit, Jakob},
+  journal={arXiv preprint arXiv:1706.05137},
+  year={2017}
+}
+@inproceedings{xiong2016dynamic,
+  title={Dynamic memory networks for visual and textual question answering},
+  author={Xiong, Caiming and Merity, Stephen and Socher, Richard},
+  booktitle={International conference on machine learning},
+  pages={2397--2406},
+  year={2016}
+}
+@article{ruder2017learning,
+  title={Learning what to share between loosely related tasks},
+  author={Ruder, Sebastian and Bingel, Joachim and Augenstein, Isabelle and S{\o}gaard, Anders},
+  journal={arXiv preprint arXiv:1705.08142},
+  year={2017}
+}
+@article{caruana1997multitask,
+  title={Multitask learning},
+  author={Caruana, Rich},
+  journal={Machine learning},
+  volume={28},
+  number={1},
+  pages={41--75},
+  year={1997},
+  publisher={Springer}
+}
+@book{mitchell1980need,
+  title={The need for biases in learning generalizations},
+  author={Mitchell, Tom M},
+  year={1980},
+  publisher={Department of Computer Science, Laboratory for Computer Science Research, Rutgers Univ. New Jersey}
+}
+@article{wang2018glue,
+  title={GLUE: A Multi-Task Benchmark and Analysis Platform for Natural Language Understanding},
+  author={Wang, Alex and Singh, Amapreet and Michael, Julian and Hill, Felix and Levy, Omer and Bowman, Samuel R},
+  journal={arXiv preprint arXiv:1804.07461},
+  year={2018}
+}
+@article{poliak2018evaluation,
+  title={On the Evaluation of Semantic Phenomena in Neural Machine Translation Using Natural Language Inference},
+  author={Poliak, Adam and Belinkov, Yonatan and Glass, James and Van Durme, Benjamin},
+  journal={arXiv preprint arXiv:1804.09779},
+  year={2018}
+}
+@article{poliak2018towards,
+  title={Towards a Unified Natural Language Inference Framework to Evaluate Sentence Representations},
+  author={Poliak, Adam and Haldar, Aparajita and Rudinger, Rachel and Hu, J Edward and Pavlick, Ellie and White, Aaron Steven and Van Durme, Benjamin},
+  journal={arXiv preprint arXiv:1804.08207},
+  year={2018}
+}
+@inproceedings{vinyals2015pointer,
+  title={Pointer networks},
+  author={Vinyals, Oriol and Fortunato, Meire and Jaitly, Navdeep},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={2692--2700},
+  year={2015}
+}
+@article{hochreiter1997long,
+  title={Long short-term memory},
+  author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+  journal={Neural computation},
+  volume={9},
+  number={8},
+  pages={1735--1780},
+  year={1997},
+  publisher={MIT Press}
+}
+@article{graves2005framewise,
+  title={Framewise phoneme classification with bidirectional LSTM and other neural network architectures},
+  author={Graves, Alex and Schmidhuber, J{\"u}rgen},
+  journal={Neural Networks},
+  volume={18},
+  number={5-6},
+  pages={602--610},
+  year={2005},
+  publisher={Elsevier}
+}
+@inproceedings{Nair2010Rectified,
+  title={Rectified Linear Units Improve Restricted Boltzmann Machines},
+  author={Nair, Vinod and Hinton, Geoffrey E.},
+  booktitle={International Conference on International Conference on Machine Learning},
+  pages={807-814},
+  year={2010},
+}
+@article{Ba2016Layer,
+  title={Layer Normalization},
+  author={Ba, Jimmy Lei and Kiros, Jamie Ryan and Hinton, Geoffrey E.},
+  year={2016},
+}
+@article{See2017Get,
+  title={Get To The Point: Summarization with Pointer-Generator Networks},
+  author={See, Abigail and Liu, Peter J. and Manning, Christopher D.},
+  pages={1073-1083},
+  year={2017},
+}
+@article{Bengio2009Curriculum,
+  title={Curriculum learning},
+  author={Bengio, Yoshua and Louradour, Jérôme and Collobert, Ronan and Weston, Jason},
+  journal={Proc.int.conf.on Machine Learning},
+  volume={60},
+  number={60},
+  pages={6},
+  year={2009},
+}
+@inproceedings{Hovy2006OntoNotes,
+  title={OntoNotes: the 90% solution},
+  author={Hovy, Eduard and Marcus, Mitchell and Palmer, Martha and Ramshaw, Lance and Weischedel, Ralph},
+  booktitle={Human Language Technology Conference of the North American Chapter of the Association of Computational Linguistics},
+  year={2006},
+}
+@article{Bowman2015A,
+  title={A large annotated corpus for learning natural language inference},
+  author={Bowman, Samuel R. and Angeli, Gabor and Potts, Christopher and Manning, Christopher D.},
+  journal={Computer Science},
+  year={2015},
+}
+@article{Kim2018Semantic,
+  title={Semantic Sentence Matching with Densely-connected Recurrent and Co-attentive Information},
+  author={Kim, Seonhoon and Hong, Jin Hyuk and Kang, Inho and Kwak, Nojun},
+  year={2018},
+}
+@inproceedings{Kotzias2015From,
+  title={From Group to Individual Labels Using Deep Features},
+  author={Kotzias, Dimitrios and Denil, Misha and Freitas, Nando De and Smyth, Padhraic},
+  booktitle={Acm Sigkdd International Conference on Knowledge Discovery & Data Mining},
+  year={2015},
+}
