--- a/tex/summary.tex
+++ b/tex/summary.tex
@@ -69,8 +69,8 @@
 除了英文自然语言生成SQL查询语句之外，中文自然语言生成SQL查询是更具难度的。
 首先，目前还没有从中文自然语言生成SQL查询语句的训练数据集，今后的研究可以先构造出这样的数据集。
 同时，由于数据库表模式往往使用的是英文甚至是英文缩写，这也很大程度的提高了这个研究领域的难度。
-其次，本文使用了多任务的网络同时学习中英翻译和英文生成SQL两个任务的解决方案，在一定程度上解决了中文生成SQl语句的问题。
-但是，随着查询语句变得复杂和冗长、SQl语句格式更长更深的时候，研究者还需要找到两者存在的更多共性从而解决问题。
+其次，本文使用了多任务的网络同时学习中英翻译和英文生成SQL两个任务的解决方案，在一定程度上解决了中文生成SQL语句的问题。
+但是，随着查询语句变得复杂和冗长、SQL语句格式更长更深的时候，研究者还需要找到两者存在的更多共性从而解决问题。
 
 
 
