--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -168,9 +168,14 @@
 % \subsection{SQL查询语句自动生成的重要性和意义}
 % \label{intro:dbmssql}
 % \subsection{（简单介绍DBMS,SQL的内容和基本格式）}
-随着社会的不断发展，以IT和互联网技术为标志的信息产业不断地改变着人类的工作和生活方式。在此背景之下，数据库技术应运而生。它是一种建立在计算机存储设备上的仓库，可以将大量数据按照数据结构来组织、存储和管理。
-关系数据库中存储了大量的数据和信息。医疗、教育、金融等各个行业都在使用关系型数据库作为数据存储以及应用程序的基础。在软件开发过程中，软件的开发和技术人员会频繁地进行SQL语句的创建与查询以及相关数据库的操作。
-在软件运行时，业务人员也会使用SQL语句进行报表与在线分析（OLAP）的定制。
+随着社会的不断发展，以IT和互联网技术为标志的信息产业不断地改变着人类的工作和生活方式。
+在此背景之下，数据库技术应运而生。
+它是一种建立在计算机存储设备上的仓库，可以将大量数据按照数据结构来组织、存储和管理。
+关系数据库中存储了大量的数据和信息。
+医疗、教育、金融等各个行业都在使用关系型数据库作为数据存储以及应用程序的基础。
+在软件系统的开发过程中，技术开发人员会频繁在系统后端运用SQL语句从而将软件系统与数据库系统连接起来，保证数据的流通。
+在软件的使用过程中，业务人员通过软件开发人员设计的数据库接口从数据库中获取所需信息。
+同时，业务人员也需要经常使用SQL语句进行报表与在线分析（OLAP）的定制。
 
 % SQL（Structured Query Language，结构化查询语句）是一种数据库查询语言，用于存取、查询、更新和管理数据库系统。
 % 目前，数据库技术已经广泛的应用于商业和科研领域，通过数据库系统和SQL，用户可以方便的对大量数据进行各种操作。
@@ -185,11 +190,14 @@
 
 % SQL是对E．F．Codd的关系模型的第一个商业化语言实现[3]，1986年10月，美国ANSI采用SQL作为关系数据库管理系统的标准语言，后为国际标准化组织（ISO）采纳为国际标准。目前，所有主要的关系数据库管理系统支持某些形式的SQL，大部分数据库至少遵守SQL的统一标准。SQL语言相比于在关系型数据库出现之前、应用于网状数据库和层次数据库的查询语言，具有如下特点：1）一体化，SQL语句的各个组成部分集数据定义、数据操纵、数据控制、数据查询于一体，可以完成关系型数据库管理中的全部工作；2）使用方式灵活，可以直接以命令方式交互使用，也可以嵌入各种程序语言中使用；3）非过程化，只需将需求表达，不必描述操作步骤，也不需要导航式步骤，大大简化了编程者的操作步骤；4）语言简洁，在ANSI标准中只包含了94个关键词，核心功能只包含6个单词，易用性强。
 
-目前，各种计算机系统，尤其是商业领域，应用关系型数据库系统和SQL语言来进行数据管理，仍然是最主流和最成熟的方案。
-需要注意的是，SQL作为一种数据库操作语言，本质上仍然是一种编程语言，需要操作人员具有一定的专业知识，经过数据库和SQL相关知识的培训，才能比较熟练的进行数据库的管理。
-此外，除了要具备SQL和数据库技术的相关知识，具体到真实数据库的操作，数据管理人员还需要对于所使用的关系型数据库的关系模式有所了解，才能将各种操作需求转化为SQL语句，来对数据库系统进行管理。
-然而，随着数据库系统的应用场景越发广泛和复杂，以及数据库数据处理量的不断提升，数据管理人员对数据库的操作逻辑也越来越复杂，数据库查询需求所涉及的数据量也越来越大，相关的关系模式也越来越复杂和多样化。
-当数据库管理需求达到这样的复杂度，非专业的数据管理人员就越来越无法满足需求。
+然而，SQL语言的复杂性和专业性也限制了关系型数据库应用技术的发展。
+SQL语言作为一种数据库操作语言，本质上是一种编程语言。它需要操作人员经过数据库和SQL相关知识的培训且具有一定的专业知识后，才能比较熟练的进行数据库的管理。
+除了要具备SQL和数据库技术的相关知识，使用者在实际操作时还需要对所涉及到的关系型数据库的模式信息有所了解，只有这样才能将各种操作需求转化为正确的SQL语句从而对数据库系统进行管理。
+随着数据库系统的应用场景越来越多、数据库的数据量和内部逻辑变得越来越复杂，即便是对经验丰富的软件开发人员或者数据库管理人员来说，想要将自己的查询意图转换为正确的SQl语句也变得越来越困难。
+对于那些希望依靠数据库来查询业务数据、生成报表或在线分析的业务人员来说其学习成本变得更高。
+
+所以，如何降低SQL语言的学习成本、如何更快更好地生成SQL查询语句、如何使用更自然的方式生成SQl语言等问题一直都是研究人员想要解决的问题。
+根据SQL查询语言自动生成领域的研究成果来看，我们可以尝试从两种方式去解决这些问题：使用交互式自然语言接口生成SQL查询语句以及将自然语言直接转换为SQL查询语句。
 
 % 加一段：为什么要NLI2SQL和NL2SQL；
 
@@ -211,10 +219,10 @@
 
 % \subsection{SQL查询语句自动生成的挑战}
 % \label{intro:sqlag}
-\subsubsection{自然语言接口自动生成SQL查询语句}
+\subsubsection{交互式自然语言接口生成SQL查询语句}
 \label{intro:nli2sql}
-自然语言接口（NLI，NaturalLanguageInterfaces），是自然语言处理和人机交互的交叉领域，旨在为人类提供通过自然语言与计算机交互的手段。
-同时，自然语言接口也是人机交互领域研究的终极目标，从各种对话机器人，到今天各种智能穿戴设备装载的语音助手，人机交互领域和自然语言理解领域的专家们一直在朝建立真正智能的自然语言接口这个目标不断前进。
+交互式自然语言接口（Interactive Natural Language Interface，在后文中将使用NLI作为简写），是自然语言处理与人机交互的交叉领域，旨在为人类提供通过自然语言与计算机交互的手段。
+同时，交互式自然语言接口也是人机交互领域研究的终极目标，从各种对话机器人，到今天各种智能穿戴设备装载的语音助手，人机交互领域和自然语言理解领域的专家们一直在朝建立真正智能的交互式自然语言接口这个目标不断前进。
 
 
 % 自然语言处理，包含了许多子问题，如分词、词性标注、句法分析、文本分类、信息抽取等等，在许多领域都有着广泛的应用。
@@ -224,7 +232,7 @@
 % 而目前，自然语言的处理则更多的利用了深度学习，神经网络，受图像处理的启发，将自然语言转化为向量、矩阵等形式，通过不同结构的神经网络来进行处理，已经取得了非常优秀的成果，
 % 并且在未来还有巨大的进步空间，这也是目前自然语言处理领域的主流研究方向。
 
-自然语言接口生成SQL也是人们关注的一个领域\cite{Androutsopoulos1995Natural}，自上个世纪提出以来，人们不断研究从自然语言生成SQL语句的可能性，并且的确在研究过程中取得了一些令人振奋的成果。
+交互式自然语言接口生成SQL\cite{Androutsopoulos1995Natural}也是人们关注的一个领域，自上个世纪提出以来，人们不断研究从自然语言生成SQL语句的可能性，并且的确在研究过程中取得了一些令人振奋的成果。
 通过自然语言接口生成SQL的数据库管理系统，原型已经出现在六十年代和七十年代初期，那时候最著名的自然语言接口数据库是Lunar，正如其名字，包含月球岩石和化学数据库的自然语言界面。
 这个原型的实现，是基于特定数据库的，因此无法很容易地修改为和不同的数据库一起使用。
 之后出现了其他的自然语言接口数据库，用户可以通过对话系统来定制查询，并且这些系统可以配置不同的接口，供不同的底层数据库调用。
@@ -236,28 +244,38 @@
 % 具体的方法有，将从自然语言到SQL语句的问题视为机器翻译问题，以从序列到序列的方式将自然语言翻译为SQL语句[5][17]；
 % 或者利用深度学习的方式优化语义解析技术，加强对自然语言结构的理解能力，等等。
 % 基于深度学习的SQL语句生成自然语言接口，所应用的技术包括词向量的训练和表达[10]、不同结构的网络模型如卷积神经网络、递归神经网络、神经语法解析器等等。
+% 一直以来，自然语言接口是人机交互领域的终极追求，也是人机交互、机器学习领域专家孜孜不倦钻研学习的热门问题。
+对于本文所指出的SQl语言给业务与技术之间带来的矛盾，如果能结合自然语言解析技术，使用人机交互的方式指导解析过程，减轻自然语言解析的歧
+义问题和错误情况，最后给用户提供一个自然语言接口来生成SQL查询语句就可以很好地解决这些问题。
 
-一直以来，自然语言接口是人机交互领域的终极追求，也是人机交互、机器学习领域专家孜孜不倦钻研学习的热门问题。
-对于本文所指出的业务层面与技术层面之间的矛盾，如果能对最终用户提供一个自然语言接口，使得我们的系统能直接从最终用户的自然语言中理解到用户的查询意图，并结合数据库，直接生成符合查询意图的SQL语句返回给用户，那么这一矛盾就可以较好的得到解决。
+% 使得我们的系统能直接从最终用户的自然语言中理解到用户的查询意图，并结合数据库，直接生成符合查询意图的SQL语句返回给用户，那么这一矛盾就可以较好的得到解决。
 % 因此，本章将对从自然语言生成SQL语句的技术和模型进行探究，尝试寻找一种解决方案，能提供自然语言接口给非技术用户，让用户通过以自然语言表达的查询意图，得到目标SQL语句。
 % \label{intro:interactionsql}
 \subsubsection{自然语言自动生成SQL查询语句}
 \label{intro:nl2sql}
-xxxxxxxxxx
+自然语言生成SQL查询语句（Nature Language To SQL Statement，在后文中奖使用NL2SQL作为简写）是SQL自动生成领域最高的要求和最难的挑战。
+其旨在使用人类的纯自然语言作为输入并直接生成出符合语义意图的SQL查询语句。
+使用纯自然语言查询语句而不是自然语言接口作为输入意味着使用者几乎可以不需要有编程及数据库应用技术的知识就可以在数据库中执行SQL语句得到所需的数据信息。
+理想状态下，NL2SQL将完全将业务与技术之间的鸿沟填平，极大地提高软件开发效率和信息获取效率。
 
-xxxxxxxxxx
+在上个世纪末就有学者提出了NL2SQL任务。
+在当时，大多数的研究者提出的语义解析器都依赖弱监督信号，即以 SQL 查询语句在数据库中的执行结果来构造训练数据。
+他们希望解析器能够生成出SQL语句的基本逻辑形式。
+由于当时的SQL语句的逻辑形式往往由专家进行人工定义，构造出的训练数据集往往非常小。同时产生的歧义问题使得设计出来的解析器的性能非常有限。
+2017 年，文献\cite{zhong2017seq2sql}的作者发布了一个由带注释的自然语言查询、SQL 查询语句和对应的数据库模式构成的大型数据集WikiSQL。
+WikiSQL中的自然语言问题的表示和数据库模式和内容上具有非常高的多样性。
+另一方面，近年来深度学习技术的蓬勃发展使得NL2SQL任务重现曙光，已经有不少研究者使用基于序列到序列的神经“机器翻译”系统或者序列到集合的模型试图解决NL2SQL问题。
 
-xxxxxxx
 % % \subsubsection{中文自然语言的SQL查询语句自动生成}
 % % \label{intro:cnl2sql}
 
-因此，本文设计和实现一个SQL查询语句自动生成工具，为数据库使用者提供简单、便捷的接口，将数据库信息映射到业务需求。用户无需了解SQL语句的使用方式，只需关注数据操作需求对应的业务需求，从而弥合业务人员与数据操作之间的矛盾。
-同时对从自然语言自动生成SQL查询语句技术（以下简称NL2SQL）进行了研究，提出了针对英文自然语言生成SQL查询语句的解决方案以及针对中文自然语言生成SQL查询语句的解决方案，使得用户可以通过自然语言的表述方式生成SQL查询语句并从关系型数据库中找到所需信息，从而缩短业务与技术之间的鸿沟，提高报表与OLAP分析的开发效率。
+% 因此，本文设计和实现一个SQL查询语句自动生成工具，为数据库使用者提供简单、便捷的接口，将数据库信息映射到业务需求。用户无需了解SQL语句的使用方式，只需关注数据操作需求对应的业务需求，从而弥合业务人员与数据操作之间的矛盾。
+% 因此，本文还对自然语言自动生成SQL查询语句技术进行了研究，提出了针对英文自然语言生成SQL查询语句的解决方案以及针对中文自然语言生成SQL查询语句的解决方案，使得用户可以通过自然语言的表述方式生成SQL查询语句并从关系型数据库中找到所需信息，从而缩短业务与技术之间的鸿沟，提高报表与OLAP分析的开发效率。
 
 \section{研究目标和研究内容}
 \label{intro:targetandcontent}
 
-本文的研究目标是研究SQL查询语句的自动化生成技术，采用解析树映射、语义解析、编码-解码器、注意力机制、深度强化学习和多任务学习等技术，提出基于自然语言接口、英文自然语言和中文自然语言自动生成SQL查询语句的技术方案。
+在此背景下，本文的研究目标为SQL查询语句的自动化生成技术，通过结合解析树映射、语义解析、编码-解码器、注意力机制、深度强化学习和多任务学习等技术，从交互式自然语言接口生成SQL查询语句（NLI2SQL）和自然语言生成SQl查询语句（NL2SQL）两种方式，提出基于自然语言接口、英文自然语言和中文自然语言自动生成SQL查询语句的技术方案。
 
 % 本文的研究思路是，先对软件众包平台的用户进行画像，在此基础上甄别小众用户，分析现有软件众包平台推荐系统中小众用户推荐的效果与影响；
 % 然后基于上述的分析发现，从两条途径进行研究，提出解决小众用户问题的方法。途径一是甄别小众用户，针对小众用户和大众用户分别采用不同的推荐模型；
@@ -265,18 +283,67 @@ xxxxxxx
 
 本文的研究思路是，先对自然语言进行初步解析和理解，并在其中插入人机交互机制，让用户来引导生成的过程，指导自然语言理解，提出自然语言接口自动生成SQL查询语句的方法。
 然后结合编码-解码器和深度强化学习等技术，对更具难度的纯英文自然语言自动生成SQL查询语句技术进行研究。
-最后使用多任务学习技术将中文-英文翻译任务和英文自然语言生成SQL查询语句技术有机结合，从而提出难度更高的中文自然语言生成SQL查询语句方法。
+最后使用多任务学习技术将中文-英文翻译任务和英文自然语言生成SQL查询语句技术有机结合，提高英文自然语言生成SQL查询语句的准确度并提出中文自然语言生成SQL查询语句的方法。
 
 具体研究内容包括：
 
-\begin{enumerate}
-  \item SQL查询语句自动生成现状。xxxxxxx
-  \item 基于映射的NLI2SQL生成。xxxxxx
-  \item 基于深度强化学习的NL2SQL生成。xxxxx
-  \item 基于多任务学习的NL2SQL生成。xxxx
-  \item 实验。xxxx
-\end{enumerate}
+1)研究交互式自然语言接口生成SQL查询语句的方法。
+研究交互式自然语言接口生成SQL语句模型的设计和具体实现。
+通过依赖解析树生成、解析树节点映射、解析树优化重构、查询树翻译模块对用户输入的查询进行意图的解析并映射到SQL查询语句上。
+通过交互式对话器和用户接口模块对意图解析和映射进行补充和重构。
+减少了自然语言解析中出现的歧义问题和错误情况，提升了准确性。
 
+
+2)研究英文自然语言生成SQL查询语句的方法。
+研究基于深度强化学习的NL2SQL生成的解决方案。
+在离线训练阶段，将WikiSQL中的数据进行序列表示后输入给网络模型，模型生成SQL查询语句后在数据库中执行，再使用奖励函数构造奖励用于强化网络模型。
+在在线生成阶段用户输入自然语言查询语句及数据库模式，训练好的网络模型将生成符合用户查询意图的SQL查询语句。
+研究神经网络模型的结构，由编码器和解码器构成并结合了自注意力机制。
+参考强化学习的基本范式，将网络模型的学习目标转换为策略的优化问题并对给出了模型的状态和动作的定义。
+研究解决SQL查询语句中的过滤条件的顺序问题、隐式列名问题的解决方法。
+
+3)研究中文自然语言生成SQL查询语句的方法。
+研究基于多任务学习的NL2SQL生成的解决方案，进一步提高NL2SQL生成的准确性以及解决中文自然语言生成SQL查询语句的问题。
+设计TCR模板对中文自然语言转换为英文自然语言任务和英文自然语言转换为SQL查询语句任务进行统一。
+研究神经网络模型的结构，使用由编码器和解码器构成的多任务网络模型。
+设计编码和解码过程的所有阶段。
+
+4）实验。
+使用Classicmodels、WikiSQl、ATIS和Spider数据来验证基于映射的INL2SQL方法、基于深度强化学习的NL2SQL方法和基于多任务学习的NL2SQL方法的有效性、准确性和可拓展性。
+
+
+% \begin{enumerate}
+%   \item SQL查询语句自动生成现状。xxxxxxx
+%   \item 基于映射的NLI2SQL生成。xxxxxx
+%   \item 基于深度强化学习的NL2SQL生成。xxxxx
+%   \item 基于多任务学习的NL2SQL生成。xxxx
+%   \item 实验。xxxx
+% \end{enumerate}
+% 1)研究交互式自然语言接口生成SQL查询语句的方法。
+% 研究交互式自然语言接口生成SQL语句模型的设计和具体实现，结合自然语言解析技术，使用人机交互的方式指导解析过程。
+% 通过依赖解析树节点映射的方法对用户输入的查询进行意图的解析并映射到SQL查询语句上，通过人机的多轮交互对意图解析和映射进行补充和重构。
+
+% 2)研究英文自然语言生成SQL查询语句的方法。
+% 研究基于深度强化学习的NL2SQL生成的解决方案，
+% 制定基于强化学习方法的整体架构并设计神经网络模型结构，
+% 转换模型学习的目标函数，
+% 提出解决过滤条件顺序问题和隐式列名问题的方法；
+% 研究基于多任务学习的NL2SQL生成的解决方案，
+% 制定基于多任务网络的整体架构并设计神经网络模型结构，
+% 通过多任务学习策略提升SQL生成准确率。
+
+
+% 3)研究中文自然语言生成SQL查询语句的方法
+% 研究基于多任务学习的中文自然语言生成SQL查询语句的解决方案，
+
+
+
+% 为了进一步提高NL2SQL生成的准确性以及解决中文自然语言生成SQL查询语句的问题，本文还提出了一种基于多任务学习的NL2SQL生成的解决方案。
+% 为了解决输入一致性的问题，本文首先提出使用TCR模板对中文自然语言转换为英文自然语言任务和英文自然语言转换为SQL查询语句任务进行统一。
+% 再使用由编码器和解码器构成的多任务网络模型。
+% 其中，编码过程包含单独编码、对准、对偶协同注意力、压缩、自注意力和最终编码阶段；
+% 解码过程包含结果表示、自注意力、获得中间状态、任务与内容注意力、获得任务与内容状态、多指针生成阶段。
+% 本文进行了多任务网络的实验、不同优化策略下的实验、应用在更多的任务上的实验结果证明了本文方法不仅能够提升英文自然语言生成SQL查询语句任务的准确性，还能够很好地完成中文自然语言生成SQL语言任务，同时还具有很好地可拓展性。
 % \subsection{研究目标}
 % \label{intro:target}
 % \subsection{关键问题}
@@ -285,14 +352,39 @@ xxxxxxx
 % \label{intro:solution}
 \section{论文结构}
 \label{intro:structure}
+全文共由五章组成：
+
 第\ref{chap:intro}章  \nameref{chap:intro} 
 
-从自然语言接口和自然语言自动生成SQL查询语句两个方面介绍了课题的研究背景、研究目标和研究内容，对全文做出总览。最后说明了论文的组织结构
+% 主要对本文的研究背景、研究目标、研究内容和解决方案进行概述，对全文内容做出总揽
 
+主要阐述了本文的研究背景、研究路线、研究目标和研究内容，并对全文内容进行总览。
+
+% 从自然语言接口和自然语言自动生成SQL查询语句两个方面
 第\ref{chap:interaction}章  \nameref{chap:interaction} 
+
+提出了一种基于映射的INL2SQL的方法。
+通过依赖解析树生成、解析树节点映射、解析树优化重构、查询树翻译模块对用户输入的查询进行意图的解析并映射到SQL查询语句上。
+通过交互式对话器和用户接口模块对意图解析和映射进行补充和重构。
+减少了自然语言解析中出现的歧义问题和错误情况，提升了准确性。
 
 第\ref{chap:enl2sql}章  \nameref{chap:enl2sql} 
 
+设定研究问题，阐述研究现状及相关技术。
+提出了一种基于深度强化学习的NL2SQL的方法。
+将系统分为离线训练阶段和在线生成阶段，使用强化学习将SQL语句的执行结果用于网络模型的强化。
+提出了由编码器和解码器构成的神经网络模型结构。
+参考强化学习的基本范式，将网络模型的学习目标转换为策略的优化问题并对给出了模型的状态和动作的定义。
+提出了解决SQL查询语句中的过滤条件的顺序问题、隐式列名问题的解决方法。
+使用WikiSQL、ATIS、Spider数据集进行实验与对比。
+
 第\ref{chap:cnl2sql}章  \nameref{chap:cnl2sql} 
 
+提出一种基于多任务学习的NL2SQL生成的解决方案并阐述相关技术。
+设计TCR模板对中文自然语言转换为英文自然语言任务和英文自然语言转换为SQL查询语句任务进行统一。
+提出由编码器和解码器构成的多任务网络模型并对编码和解码过程的所有阶段进行阐述。
+进行了多任务网络和不同优化策略下的实验，进一步提高了NL2SQL生成以及中文自然语言生成SQL查询语句的准确性。
+
 第\ref{chap:conculution}章  \nameref{chap:conculution} 
+
+总结本文当前已经完成的工作，给出本文主要的贡献与创新点，对下一步的研究工作进行展望。
