致谢、摘要、修改图。

--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -21,7 +21,56 @@
 % 截至2011年12月31日，学校共有24个学院/直属系（另有继续教育学院、技术学院和国际教育学院），19个直属单位，12家附属医院，全日制本科生16802人、研究生24495人（其中博士研究生5059人）；有专任教师2979名，其中教授835名；中国科学院院士15名，中国工程院院士20名，中组部“千人计划”49名，“长江学者”95名，国家杰出青年基金获得者80名，国家重点基础研究发展计划（973计划）首席科学家24名，国家重大科学研究计划首席科学家9名，国家基金委创新研究群体6个，教育部创新团队17个。
 
 % 学校现有本科专业68个，涵盖经济学、法学、文学、理学、工学、农学、医学、管理学和艺术等九个学科门类；拥有国家级教学及人才培养基地7个，国家级校外实践教育基地5个，国家级实验教学示范中心5个，上海市实验教学示范中心4个；有国家级教学团队8个，上海市教学团队15个；有国家级教学名师7人，上海市教学名师35人；有国家级精品课程46门，上海市精品课程117门；有国家级双语示范课程7门；2001、2005和2009年，作为第一完成单位，共获得国家级教学成果37项、上海市教学成果157项。
-待写
+
+随着IT和互联网技术地不断发展，医疗、教育、金融等各个行业都在使用关系型数据库作为数据存储。
+技术人员在软件开发过程中会频繁地使用SQL语句用于数据的增删改查，业务人员也经常使用SQL语句进行报表与在线分析（OLAP）的定制，从数据库中获取所需信息。
+但是，SQL语言本质上是一种编程语言。使用者首先需要具有一定的数据库和SQL语言相关专业知识，并且需要在熟悉数据库模式的前提下，才能熟练的进行数据库的管理。
+如何降低SQL语言的学习成本、如何更快更好地生成SQL查询语句、如何使用更自然的方式生成SQL语言等问题一直都是学术界和工业界想要解决的问题。
+
+为了解决上述问题，本文对SQL查询语句的自动生成技术进行研究，分析了该领域的现有研究成果，
+从交互式自然语言接口生成SQL查询语句和自然语言生成SQL查询语句两种方式展开研究。
+
+本文主要的贡献和创新点包括：
+
+1)研究提出了一种基于映射的INL2SQL生成方法。
+该方法使用依赖解析树生成、解析树节点映射、解析树优化重构、查询树翻译模块对用户输入的查询进行意图的解析并将其映射到SQL查询语句上。
+同时，通过交互式对话器和用户接口模块对意图解析和映射进行补充和重构，解决意图缺失和歧义问题。
+
+% 减少了自然语言解析中出现的歧义问题和错误情况，提升了准确性。
+
+
+2)研究提出了一种基于深度强化学习的NL2SQL生成方法。
+本文提出将系统分为离线训练阶段和在线生成阶段，使用强化学习将SQL语句的执行结果用于神经网络模型的强化。
+提出了由编码器和解码器构成的神经网络模型结构。
+将网络模型的学习目标转换为策略的优化问题并对给出了模型的状态和动作的定义。
+提出了解决SQL查询语句中的过滤条件的顺序问题、隐式列名问题的解决方法。
+% 使用WikiSQL、ATIS、Spider数据集进行实验与对比。
+
+
+% 本文提出了的解决方案。
+% 在离线训练阶段，将WikiSQL中的数据进行序列表示后输入给网络模型，模型生成SQL查询语句后在数据库中执行，再使用奖励函数构造奖励用于强化网络模型。
+% 在在线生成阶段用户输入自然语言查询语句及数据库模式，训练好的网络模型将生成符合用户查询意图的SQL查询语句。
+% 我们把其中最重要的网络模型称为“增强解析器”模型，它由编码器和解码器构成并结合了自注意力机制。
+% 参考强化学习的基本范式，本文将增强解析器学习的目标转换为策略的优化问题并对给出了解析器的状态和动作的定义。
+% 为了解决SQL查询语句中的过滤条件的顺序问题以及隐式列名的问题，本文还提出了非确定性预言和$ANYCOL$状态的解决办法。
+% 在与目前NL2SQL领域的前沿方法进行对比以及在不同数据集上的实验结果证明了本文方法的有效性与前瞻性。
+
+% 设定研究问题，阐述研究现状及相关技术。
+% 提出了一种基于深度强化学习的NL2SQL的方法。
+
+3)研究提出了一种基于多任务学习的NL2SQL生成方法。
+该方法通过设计TCR模板，将中文自然语言转换为英文自然语言任务和英文自然语言转换为SQL查询语句任务进行统一。
+提出由编码器和解码器构成的多任务网络模型，通过单独编码、对准、对偶协同注意力、压缩、自注意力和最终编码阶段进行编码，
+通过结果表示、自注意力、获得中间状态、任务与内容注意力、获得任务与内容状态、多指针生成阶段进行解码，
+并运用不同的优化策略进行多任务的学习。
+
+本文在多个数据集上进行了实验。
+实验结果证明，基于映射的INL2SQL生成方法减少了自然语言解析中出现的歧义问题和错误情况，提升了准确性。
+基于深度强化学习的NL2SQL生成方法在WikiSQL数据集上的表现一流，在Spider数据集的验证集和测试集上的表现超过同类方法，达到23.2\%和24.1\%。
+基于多任务学习的NL2SQL生成方法在WikiSQL数据集上达到72.4\%和80.4\%的最高水平，证明了方法的有效性和准确性。
+在引入更多的任务进行学习时，该方法达到了571.7的总分，证明了该方法能够有效解决中文自然语言生成SQL查询语句问题，同时还具有很好的通用性和可拓展性。
+
+
 \end{abstract}
 
 \begin{englishabstract}
