--- a/tex/ack.tex
+++ b/tex/ack.tex
@@ -4,16 +4,34 @@
 % !TEX encoding = UTF-8 Unicode
 \begin{thanks}
 
-  感谢所有测试和使用交大学位论文 \LaTeX 模板的同学！
+  % 感谢所有测试和使用交大学位论文 \LaTeX 模板的同学！
 
-  感谢那位最先制作出博士学位论文 \LaTeX 模板的交大物理系同学！
+  % 感谢那位最先制作出博士学位论文 \LaTeX 模板的交大物理系同学！
 
-  感谢William Wang同学对模板移植做出的巨大贡献！
+  % 感谢William Wang同学对模板移植做出的巨大贡献！
   
-  感谢 \href{https://github.com/weijianwen}{@weijianwen} 学长一直以来的开发和维护工作！
+  % 感谢 \href{https://github.com/weijianwen}{@weijianwen} 学长一直以来的开发和维护工作！
   
-  感谢 \href{https://github.com/sjtug}{@sjtug} 以及 \href{https://github.com/dyweb}{@dyweb} 对 0.9.5 之后版本的开发和维护工作！
+  % 感谢 \href{https://github.com/sjtug}{@sjtug} 以及 \href{https://github.com/dyweb}{@dyweb} 对 0.9.5 之后版本的开发和维护工作！
   
-  感谢所有为模板贡献过代码的同学们, 以及所有测试和使用模板的各位同学！
+  % 感谢所有为模板贡献过代码的同学们, 以及所有测试和使用模板的各位同学！
+
+一转眼，我的的研究生生涯即将结束了，回想自己在交大的这两年半的时光，感触良多。
+在此我要向研究生期间给予过我指导的所有老师、陪伴我成长的各位同学致以诚挚的感谢。
+
+首先，我要对我的研究生导师沈备军老师表示感谢。
+在科研方面，沈老师一直鼓励和尊重我选择自己感兴趣的研究方向，引导并指导我的研究内容，
+沈老师认真严谨的办事作风和勤勤恳恳的工作态度给我留下了深刻的印象。
+在工程开发上，沈老师让我积极地参与和主导实验室的项目，使我积累了一定的项目经验并提高了技术水平。
+在生活中，沈老师也非常关心我的身体健康，主动为我排忧解难。
+此外，沈老师资助我前往美国参加国际会议，让我开阔了视野并结识了许多优秀的同行。
+
+还要感谢研究生期间所有的老师，他们孜孜不倦的教诲使我丰富了知识，细致入微的工作使我们可以顺利并愉快地度过这两年半的时光。
+感谢莫文凯和陈凯学长，在我做研究实验与发表论文时都给予我很大的帮助，为我树立了榜样。
+感谢黄卫智、杨宇、李宁和董翔学长，不仅在项目开发上为我解答释疑，在毕业之后还与我分享工作心得与感悟，让我不断成长。
+感谢实验室的所有同学，我们一起做项目、一起讨论技术难题、一起团队建设，大家的陪伴与支持让我能够一路前行。
+
+最后，我要感谢我的父母和女友，和你们在一起是我最轻松和快乐的时候。
+无论我是否努力，是否优秀，不管我做怎样的决定，你们都一直在我的身后坚定地支持我。
 
 \end{thanks}
