--- a/tex/id.tex
+++ b/tex/id.tex
@@ -12,7 +12,8 @@
 \institute{软件学院}
 \studentnumber{116037910048}
 \major{软件工程}
-\keywords{上海交大, 饮水思源, 爱国荣校}
+% \keywords{上海交大, 饮水思源, 爱国荣校}
+\keywords{SQL生成，交互式自然语言接口，NL2SQL，多任务学习}
 
 \englishtitle{Research on Automatic Generation Technology of SQL Query Statement}
 \englishauthor{\textsc{Xiong Yunxiang}}
