--- a/thesis.tex
+++ b/thesis.tex
@@ -107,7 +107,7 @@
     \include{tex/projectsreview}  
   \else
     \include{tex/pub}       % 发表论文
-    \include{tex/projects}  % 参与的项目
+    % \include{tex/projects}  % 参与的项目
   \fi
 \fi
 
