--- a/tex/pub.tex
+++ b/tex/pub.tex
@@ -8,6 +8,10 @@
 %%==================================================
 
 \begin{publications}{99}
-    \item\textsc{Chen H, Chan C~T}. {Acoustic cloaking in three dimensions using acoustic metamaterials}[J]. Applied Physics Letters, 2007, 91:183518.
-    \item\textsc{Chen H, Wu B~I, Zhang B}, et al. {Electromagnetic Wave Interactions with a Metamaterial Cloak}[J]. Physical Review Letters, 2007, 99(6):63903.
+    \item\textsc{Xiong Y, Meng Z, Shen B}, et al. {Mining Developer Behavior Across GitHub and StackOverflow}[C] International Conference on Software Engineering and Knowledge Engineering. 2017:578-583.
+    % Xiong Y, Meng Z, Shen B Mining Developer Behavior Across GitHub and StackOverflow[C]// The, International Conference on Software Engineering and Knowledge Engineering. 2017:578-583.
+% Xiong Y, Meng Z, Shen B Developer Identity Linkage and Behavior Mining Across GitHub and StackOverflow[J]. International Journal of Software Engineering & Knowledge Engineering, 2018, 27(9n10):1409-1425.
+    \item\textsc{Xiong Y, Meng Z, Shen B}, et al. {Developer Identity Linkage and Behavior Mining Across GitHub and StackOverflow}[J]. International Journal of Software Engineering \& Knowledge Engineering, 2018, 27(9n10):1409-1425.
+    % \item\textsc{Chen H, Chan C~T}. {Acoustic cloaking in three dimensions using acoustic metamaterials}[J]. Applied Physics Letters, 2007, 91:183518.
+    % \item\textsc{Chen H, Wu B~I, Zhang B}, et al. {Electromagnetic Wave Interactions with a Metamaterial Cloak}[J]. Physical Review Letters, 2007, 99(6):63903.
 \end{publications}
