按沈对第一章的意见进行更改，修改第三章的神经元图等。

--- a/bib/thesis.bib
+++ b/bib/thesis.bib
@@ -497,3 +497,22 @@
   booktitle={Acm Sigkdd International Conference on Knowledge Discovery & Data Mining},
   year={2015},
 }
+@article{woods1972lunar,
+  title={The lunar sciences natural language information system},
+  author={Woods, William},
+  journal={BBN report},
+  year={1972},
+  publisher={Bolt Beranek and Newman}
+}
+@article{wallace1984communicating,
+  title={Communicating with Databases in Natural Languages},
+  author={Wallace, Mark},
+  year={1984},
+  publisher={CUMINCAD}
+}
+@book{alshawi1992core,
+  title={The core language engine},
+  author={Alshawi, Hiyan},
+  year={1992},
+  publisher={mit Press}
+}
