--- a/tex/enl2sql.tex
+++ b/tex/enl2sql.tex
@@ -122,19 +122,27 @@ NL2SQL（Nature Language To SQL Statement）任务可以看作是一种语义解
 \subsection{神经网络}
 % \textbf{神经网络}
 
+% \begin{figure}[!htp]
+%   \centering
+%   \includegraphics[width=10cm]{example/BNN.pdf}
+%   \includegraphics[width=10cm]{example/NNMM.pdf}
+%   \bicaption[生物神经元及其数学抽象]
+%     {生物神经元及其数学抽象\cite{goodfellow2016deep}}
+%     {Biological Neurons And Mathematical Representation}
+%   \label{fig:BNNandNNMM}
+% \end{figure}
 \begin{figure}[!htp]
   \centering
-  \includegraphics[width=10cm]{example/BNN.pdf}
-  \includegraphics[width=10cm]{example/NNMM.pdf}
+  \includegraphics[width=12cm]{example/BNNNNMM.pdf}
   \bicaption[生物神经元及其数学抽象]
     {生物神经元及其数学抽象\cite{goodfellow2016deep}}
     {Biological Neurons And Mathematical Representation}
-  \label{fig:BNNandNNMM}
+  \label{fig:BNNNNMM}
 \end{figure}
 
-神经网络（Neural Network）是深度学习的基础，它是一种计算模型，其灵感来源于人脑的生物神经网络处理信息的方式，如图\ref{fig:BNNandNNMM}上。
+神经网络（Neural Network）是深度学习的基础，它是一种计算模型，其灵感来源于人脑的生物神经网络处理信息的方式，如图\ref{fig:BNNNNMM}(1)。
 我们知道大脑的基本计算单元是神经元，人类的神经系统中大约有860亿个神经元以及与之相连的$10^{10}$至$10^{15}$个突触。
-计算机科学家将神经元的工作原理抽象成为数学的表达形式，如图\ref{fig:BNNandNNMM}下。
+计算机科学家将神经元的工作原理抽象成为数学的表达形式，如图\ref{fig:BNNNNMM}(2)。
 
 % \begin{figure}[!htp]
 %   \centering
@@ -331,7 +339,7 @@ $a$为权重，表示输出时应当考虑多少输入状态。
 \end{itemize}
 \begin{figure}[!htp]
   \centering
-  \includegraphics[width=11cm]{example/RL.jpg}
+  \includegraphics[width=8cm]{example/RL.jpg}
   \bicaption[强化学习范式]
     {强化学习范式}
     {The Paradigm of Reinforcement Learning}
