--- a/tex/summary.tex
+++ b/tex/summary.tex
@@ -31,7 +31,7 @@
 本文提出了一种基于深度强化学习的NL2SQL生成的解决方案。
 在离线训练阶段，将WikiSQL中的数据进行序列表示后输入给网络模型，模型生成SQL查询语句后在数据库中执行，再使用奖励函数构造奖励用于强化网络模型。
 在在线生成阶段用户输入自然语言查询语句及数据库模式，训练好的网络模型将生成符合用户查询意图的SQL查询语句。
-我们把其中最重要的网络模型称为“增强解析器”模型，它由编码器和解码器构成并结合了自注意力机制。
+本文把其中最重要的网络模型称为“增强解析器”模型，它由编码器和解码器构成并结合了自注意力机制。
 参考强化学习的基本范式，本文将增强解析器学习的目标转换为策略的优化问题并对给出了解析器的状态和动作的定义。
 为了解决SQL查询语句中的过滤条件的顺序问题以及隐式列名的问题，本文还提出了非确定性预言和$ANYCOL$状态的解决办法。
 在与目前NL2SQL领域的前沿方法进行对比以及在不同数据集上的实验结果证明了本文方法的有效性与前瞻性。
@@ -59,7 +59,7 @@
 
 \textbf{2)复杂SQL语句的自动生成}
 
-本文及其他最新的研究工作所使用到的数据集都是以WikiSQL数据集为主，而WikiSQL数据属于spider数据集中定义的简单和中等难度。
+本文及其他最新的研究工作所使用到的数据集都是以WikiSQL数据集为主，而WikiSQL数据属于Spider数据集中定义的简单和中等难度。
 本文提出的解决方案已经几乎达到简单和中等难度的SQl查询语句生成的最佳性能，之后的模型需要更多地考虑解决语句的多样性和复杂性。
 可以通过分析困难和极难难度的SQL查询语句的特性来设计新的更复杂的神经网络结构，可以考虑将深度学习和模块化的工程相结合的办法解决单个神经网络无法解决的问题。
 另外，SQL查询语句只是SQL语句中结构最简单、语义最清楚的一种，而范围更大的SQL语句的自动生成任务是更具挑战的。
