按沈意见修改三四章

--- a/bib/thesis.bib
+++ b/bib/thesis.bib
@@ -516,3 +516,21 @@
   year={1992},
   publisher={mit Press}
 }
+@article{wang2016machine,
+  title={Machine comprehension using match-lstm and answer pointer},
+  author={Wang, Shuohang and Jiang, Jing},
+  journal={arXiv preprint arXiv:1608.07905},
+  year={2016}
+}
+@article{seo2016bidirectional,
+  title={Bidirectional attention flow for machine comprehension},
+  author={Seo, Minjoon and Kembhavi, Aniruddha and Farhadi, Ali and Hajishirzi, Hannaneh},
+  journal={arXiv preprint arXiv:1611.01603},
+  year={2016}
+}
+@article{xiong2017dcn+,
+  title={Dcn+: Mixed objective and deep residual coattention for question answering},
+  author={Xiong, Caiming and Zhong, Victor and Socher, Richard},
+  journal={arXiv preprint arXiv:1711.00106},
+  year={2017}
+}
