中英扉页修改，参考文献格式修改

--- a/sjtuthesis.cls
+++ b/sjtuthesis.cls
@@ -107,7 +107,8 @@
 \RequirePackage{caption}
 \RequirePackage[list=off]{bicaption}
 \RequirePackage{subcaption}
-\RequirePackage[backend=biber,style=gb7714-2015]{biblatex}
+% \RequirePackage[backend=biber,style=gb7714-2015]{biblatex}
+\RequirePackage[backend=biber, style=gb7714-2015, gbnamefmt=lowercase, gbpub=false]{biblatex}
 \RequirePackage{xcolor}
 \RequirePackage{listings}
 \RequirePackage{textcomp}
