--- a/tex/id.tex
+++ b/tex/id.tex
@@ -4,10 +4,10 @@
 % !TEX encoding = UTF-8 Unicode
 \title{SQL查询语句的自动生成技术研究}
 % \author{熊\quad{}云\quad{}翔}
-\author{熊云翔}
-\advisor{沈备军}
+\author{熊\quad{}云\quad{}翔}
+\advisor{沈备军\quad{}副教授}
 % \coadvisor{某某教授}
-\defenddate{2018年12月12日}
+\defenddate{2019年1月9日}
 \school{上海交通大学}
 \institute{软件学院}
 \studentnumber{116037910048}
@@ -16,14 +16,15 @@
 \keywords{SQL生成，交互式自然语言接口，NL2SQL，多任务学习}
 
 \englishtitle{Research on Automatic Generation Technology of SQL Query Statement}
-\englishauthor{\textsc{Xiong Yunxiang}}
+\englishauthor{\textsc{Yunxiang Xiong}}
 \englishadvisor{Prof. \textsc{Beijun Shen}}
 % \englishcoadvisor{Prof. \textsc{Uom Uom}}
 \englishschool{Shanghai Jiao Tong University}
-\englishinstitute{\textsc{Software Engineering} \\
+\englishinstitute{\textsc{Depart of Software Engineering, School of Electronic Information and Electrical
+Engineering} \\
   \textsc{Shanghai Jiao Tong University} \\
   \textsc{Shanghai, P.R.China}}
-\englishmajor{Engineering}
-\englishdate{Dec. 12th, 2018}
+\englishmajor{Software Engineering}
+\englishdate{Jan. 9th, 2018}
 \englishkeywords{SJTU, master thesis, XeTeX/LaTeX template}
 
