对第四章、发表论文、总结的修改

--- a/tex/pub.tex
+++ b/tex/pub.tex
@@ -8,10 +8,14 @@
 %%==================================================
 
 \begin{publications}{99}
-    \item\textsc{Xiong Y, Meng Z, Shen B}, et al. {Mining Developer Behavior Across GitHub and StackOverflow}[C] International Conference on Software Engineering and Knowledge Engineering. 2017:578-583.
+    % \item\textsc{Xiong Y, Meng Z, Shen B}, et al. {Mining Developer Behavior Across GitHub and StackOverflow}[C] International Conference on Software Engineering and Knowledge Engineering. 2017:578-583.
+    \item\textsc{Xiong Y, Meng Z, Shen B}, et al. {Mining Developer Behavior Across GitHub and StackOverflow}. The 29th International Journal of Software Engineering and Knowledge Engineering, PP.578-583, Pittsburgh, USA, July 5th-7th, 2017.
     % Xiong Y, Meng Z, Shen B Mining Developer Behavior Across GitHub and StackOverflow[C]// The, International Conference on Software Engineering and Knowledge Engineering. 2017:578-583.
 % Xiong Y, Meng Z, Shen B Developer Identity Linkage and Behavior Mining Across GitHub and StackOverflow[J]. International Journal of Software Engineering & Knowledge Engineering, 2018, 27(9n10):1409-1425.
-    \item\textsc{Xiong Y, Meng Z, Shen B}, et al. {Developer Identity Linkage and Behavior Mining Across GitHub and StackOverflow}[J]. International Journal of Software Engineering \& Knowledge Engineering, 2018, 27(9n10):1409-1425.
+    % \item\textsc{Xiong Y, Meng Z, Shen B}, et al. {Developer Identity Linkage and Behavior Mining Across GitHub and StackOverflow}[J]. International Journal of Software Engineering \& Knowledge Engineering, 2018, 27(9n10):1409-1425.
+    \item\textsc{Xiong Y, Meng Z, Shen B}, et al. {Developer Identity Linkage and Behavior Mining Across GitHub and StackOverflow}. International Journal of Software Engineering and Knowledge Engineering, 2018, Volume 27 No.9\&10: 1409-1425 [SCI检索] WOS: 000423457100004.
     % \item\textsc{Chen H, Chan C~T}. {Acoustic cloaking in three dimensions using acoustic metamaterials}[J]. Applied Physics Letters, 2007, 91:183518.
     % \item\textsc{Chen H, Wu B~I, Zhang B}, et al. {Electromagnetic Wave Interactions with a Metamaterial Cloak}[J]. Physical Review Letters, 2007, 99(6):63903.
 \end{publications}
+% The 29thInternational Journal of Software Engineering and Knowledge Engineering (SEKE), PP.376-381, Pittsburgh, USA, July 5th-7th, 2017.
+% 2	Weizhi Huang, Wenkai Mo, Beijun Shen, Yu Yang and Ning Li. Automatically Modeling Developer Programming Ability and Interest across Software Communities. International Journal of Software Engineering and Knowledge Engineering, 2018, Volume 27 No.9 & 10: 1409-1425 [SCI检索] WOS: 000423457100004
