--- a/tex/summary.tex
+++ b/tex/summary.tex
@@ -10,44 +10,48 @@
 \label{chap:conculution}
 \section{本文贡献}
 
-随着IT和互联网技术的发展，关系型数据库和数据库技术被广泛地使用并作为数据存储的主要方式。
-越来越多的软件技术人员和业务人员需要使用SQL查询语句从数据库中获得所需的信息。
+目前，数据库技术被广泛地应用于软件系统作为数据存储的主要方式。
+除了软件开发人员需要编程进行数据存取外，业务人员在OLAP和报表等应用场景中也需要编写SQL查询语句，从而实现灵活的数据按需读取。
 然而，掌握SQL语言需要使用者经过数据库和SQL相关知识的培训，且在使用时需要确切了解数据库的模式等信息。
 如果可以让使用者通过交互式的自然语言接口甚至直接使用自然语言来对数据库执行查询将大大缩短业务与技术的鸿沟，极大地提升软件的生产效率。
-在此背景下，本文对SQL查询语句的生成技术进行了研究，提出了基于映射的INL2SQL生成、基于深度强化学习的NL2SQL生成和基于多任务学习的NL2SQL生成三种解决方案。
+在此背景下，本文对面向最终用户的SQL查询语句生成技术进行了研究，提出了基于映射的INL2SQL生成、基于深度强化学习的NL2SQL生成和基于多任务学习的NL2SQL生成三种方法。
 
 本文的主要贡献和创新点包括：
 
-\textbf{1)交互式自然语言接口生成SQL查询语句的方法}
+\textbf{1)基于映射的交互式自然语言接口生成SQL查询语句的方法}
 
-本文提出了交互式自然语言接口生成SQL语句模型的设计和具体实现，基本思想是结合自然语言解析技术，使用人机交互的方式指导解析过程。
+本文提出了基于映射的交互式自然语言接口生成SQL语句的模型与方法，其核心思想是结合自然语言解析技术，使用人机交互的方式指导解析过程，
 通过依赖解析树生成、解析树节点映射、解析树优化重构、查询树翻译模块对用户输入的查询进行意图的解析并映射到SQL查询语句上。
-通过交互式对话器和用户接口模块对意图解析和映射进行补充和重构。
-减少了自然语言解析中出现的歧义问题和错误情况，提升了准确性。
+从Classicmodels和MAS数据集上的实验结果来看，模型在有交互的情况下在简单、中等、困难的场景下的表现为100\%、80\%、35\%和100\%、93\%、71\%。
+通过交互式对话器和用户接口模块对意图解析和映射进行补充和重构，减少了自然语言解析中出现的歧义问题和错误情况，提升了SQL查询语句生成的有效性。
+%done 把实验结论写一下，用数字说话。
 
+\textbf{2)基于深度强化学习的英文自然语言生成SQL查询语句的方法}
 
-\textbf{2)英文自然语言生成SQL查询语句的方法}
-
-本文提出了一种基于深度强化学习的NL2SQL生成的解决方案。
-在离线训练阶段，将WikiSQL中的数据进行序列表示后输入给网络模型，模型生成SQL查询语句后在数据库中执行，再使用奖励函数构造奖励用于强化网络模型。
+本文提出了一种基于深度强化学习的NL2SQL生成的模型与方法。
+本方法在离线训练阶段，将WikiSQL中的数据进行序列表示后输入给网络模型，模型生成SQL查询语句后在数据库中执行，再使用奖励函数构造奖励用于强化网络模型。
 在在线生成阶段用户输入自然语言查询语句及数据库模式，训练好的网络模型将生成符合用户查询意图的SQL查询语句。
-本文把其中最重要的网络模型称为“增强解析器”模型，它由编码器和解码器构成并结合了自注意力机制。
-参考强化学习的基本范式，本文将增强解析器学习的目标转换为策略的优化问题并对给出了解析器的状态和动作的定义。
-为了解决SQL查询语句中的过滤条件的顺序问题以及隐式列名的问题，本文还提出了非确定性预言和$ANYCOL$状态的解决办法。
-在与目前NL2SQL领域的前沿方法进行对比以及在不同数据集上的实验结果证明了本文方法的有效性与前瞻性。
+本方法的网络模型，即增强解析器模型，由编码器和解码器构成，并结合了自注意力机制。
+通过引入强化学习技术，本方法将增强解析器学习的目标转换为策略的优化问题并对给出了解析器的状态和动作的定义。
+为了解决SQL查询语句中的过滤条件的顺序问题以及隐式列名的问题，还提出了非确定性预言和$ANYCOL$状态的解决办法。
+实验表明，与目前NL2SQL的现有方法相比，本方法在WikiSQL数据集上的表现一流，并且在Spider数据集的验证集和测试集上的表现超过同类方法，达到23.2\%和24.1\%。
+%done 把实验结论写一下，用数字说话。
 
 \textbf{3)中文自然语言生成SQL查询语句的方法}
 
-为了进一步提高NL2SQL生成的准确性以及解决中文自然语言生成SQL查询语句的问题，本文还提出了一种基于多任务学习的NL2SQL生成的解决方案。
-为了解决输入一致性的问题，本文首先提出使用TCR模板对中文自然语言转换为英文自然语言任务和英文自然语言转换为SQL查询语句任务进行统一。
-再使用由编码器和解码器构成的多任务网络模型。
-其中，编码过程包含单独编码、对准、对偶协同注意力、压缩、自注意力和最终编码阶段；
-解码过程包含结果表示、自注意力、获得中间状态、任务与内容注意力、获得任务与内容状态、多指针生成阶段。
-本文进行了多任务网络的实验、不同优化策略下的实验、应用在更多的任务上的实验结果证明了本文方法不仅能够提升英文自然语言生成SQL查询语句任务的准确性，还能够很好地完成中文自然语言生成SQL语言任务，同时还具有很好地可拓展性。
+为了进一步提高NL2SQL生成的准确性以及解决中文自然语言生成SQL查询语句的问题，本文提出了一种基于多任务学习的NL2SQL生成的模型与方法。
+本方法使用TCR模板把中文自然语言转换为英文自然语言任务和英文自然语言转换为SQL查询语句任务进行统一。
+再使用由编码器和解码器构成的多任务网络模型进行多任务学习。
+其中，编码过程包含单独编码、对准、对偶协同注意力、压缩、自注意力和最终编码等阶段；
+解码过程包含结果表示、自注意力、获得中间状态、任务与内容注意力、获得任务与内容状态、多指针生成等阶段。
+本文进行了多任务学习实验和优化策略实验，在WikiSQL数据集上达到72.4\%和80.4\%的最高水平，并且在引入更多的任务进行学习时达到了607.7的总分。
+实验表明，本方法不仅能够提升英文自然语言生成SQL查询语句任务的准确性，还能够很好地完成中文自然语言生成SQL语言任务，同时还具有很好的可拓展性。
+
+%done 上述实验结论应用数字说话。
 
 \section{展望}
 
-由于时间和能力有限，可以在以下几个方面做进一步的研究和改进：
+由于时间和能力有限，本文的研究工作还有不少不足，我们计划在以下两个方面做进一步的研究和改进：
 
 \textbf{1)交互式自然语言接口生成SQL查询语句的泛化能力}
 
@@ -64,28 +68,3 @@
 可以通过分析困难和极难难度的SQL查询语句的特性来设计新的更复杂的神经网络结构，可以考虑将深度学习和模块化的工程相结合的办法解决单个神经网络无法解决的问题。
 另外，SQL查询语句只是SQL语句中结构最简单、语义最清楚的一种，而范围更大的SQL语句的自动生成任务是更具挑战的。
 
-\textbf{3)中文自然语言生成SQL查询语句}
-
-除了英文自然语言生成SQL查询语句之外，中文自然语言生成SQL查询是更具难度的。
-首先，目前还没有从中文自然语言生成SQL查询语句的训练数据集，今后的研究可以先构造出这样的数据集。
-同时，由于数据库表模式往往使用的是英文甚至是英文缩写，这也很大程度的提高了这个研究领域的难度。
-其次，本文使用了多任务的网络同时学习中英翻译和英文生成SQL两个任务的解决方案，在一定程度上解决了中文生成SQL语句的问题。
-但是，随着查询语句变得复杂和冗长、SQL语句格式更长更深的时候，研究者还需要找到两者存在的更多共性从而解决问题。
-
-
-
-% \begin{summary}
-
-% 这里是全文总结内容。
-
-% 2015年2月28日，中央在北京召开全国精神文明建设工作表彰暨学雷锋志愿服务大会，公布全国文明城市（区）、文明村镇、文明单位名单。上海交通大学荣获全国文明单位称号。         
-
-% 全国文明单位这一荣誉是对交大人始终高度重视文明文化工作的肯定，是对交大长期以来文明创建工作成绩的褒奖。在学校党委、文明委的领导下，交大坚持将文明创建工作纳入学校建设世界一流大学的工作中，全体师生医护员工群策群力、积极开拓，落实国家和上海市有关文明创建的各项要求，以改革创新、科学发展为主线，以质量提升为目标，聚焦文明创建工作出现的重点和难点，优化文明创建工作机制，传播学校良好形象，提升社会美誉度，显著增强学校软实力。2007至2012年间，上海交大连续三届荣获“上海市文明单位”称号，成为创建全国文明单位的新起点。         
-
-% 上海交大自启动争创全国文明单位工作以来，凝魂聚气、改革创新，积极培育和践行社会主义核心价值观。坚持统筹兼顾、多措并举，将争创全国文明单位与学校各项中心工作紧密结合，着力构建学校文明创建新格局，不断提升师生医护员工文明素养，以“冲击世界一流大学汇聚强大精神动力”为指导思想，以“聚焦改革、多元推进、以评促建、丰富内涵、彰显特色”为工作原则，并由全体校领导群策领衔“党的建设深化、思想教育深入、办学成绩显著、大学文化丰富、校园环境优化、社会责任担当”六大板块共28项重点突破工作，全面展现近年来交大文明创建工作的全貌和成就。         
-
-% 进入新阶段，学校将继续开拓文明创建工作新格局，不断深化工作理念和工作实践，创新工作载体、丰富活动内涵、凸显创建成效，积极服务于学校各项中心工作和改革发展的大局面，在上级党委、文明委的关心下，在学校党委的直接领导下，与时俱进、开拓创新，为深化内涵建设、加快建成世界一流大学、推动国家进步和社会发展而努力奋斗！       
-
-% 上海交通大学医学院附属仁济医院也获得全国文明单位称号。      
-
-% \end{summary}
